--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <!-- <ion-tab [root]="tab2Root" tabTitle="Mesas" tabIcon="restaurant"></ion-tab> -->
-  <ion-tab [root]="tab3Root" tabTitle="Info" tabIcon="information-circle"></ion-tab>
+  <!-- <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
+   <ion-tab [root]="tab2Root" tabTitle="Mesas" tabIcon="restaurant"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Info" tabIcon="information-circle"></ion-tab> -->
   
 </ion-tabs>
