--- a/src/pages/mesas/mesas.html
+++ b/src/pages/mesas/mesas.html
@@ -2,9 +2,9 @@
   <ion-navbar color="primary">
     <ion-title>Mesas</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="backToHome()">
+      <!-- <button ion-button icon-only (click)="backToHome()">
           <ion-icon  name="arrow-back" ></ion-icon>
-      </button>
+      </button> -->
     </ion-buttons>
   </ion-navbar>
 </ion-header>
